SafeBatch WalkJobHandle.getListOutTransaction.